# deep-image-prior-handbook

./: .gitignore  README.md  create_walnut_ray_trafo_matrix.py  dip_tv_hqs.py  environment.yml  jacobian_rsvd.py  jacobian_rsvd_single.py  l2_min.py  operator_module.py  overeng_rundip.py  plot_dip_results.py  plot_dip_results_new_style.py  plutils.py  pyproject.toml  run_dip.py  run_dip_training.py  runs.py  self_guidance_dip_walnut.py  sequential_dip_walnut.py  simple_dip.py  splitting_dip_tv.py  tv_baseline.py  tv_reco.py  tv_reco_search.py  tv_reco_walnut.py  utils.py  vanilla_dip_walnut.py  walnut.pt
configs/: dip_architecture.yaml  walnut_config.yaml  wandb_config.py
data/: README.md
dataset/: __init__.py  walnut.py
dip/: __init__.py  utils.py  vanilla_dip.py
dip/dataset/: __init__.py  base_ray_trafo.py  ellipses.py  fastmri.py  matmul_ray_trafo.py  walnut.py  walnut_2d_ray_trafo.py  walnut_utils.py
dip/logging/: __init__.py  logger.py
dip/model/: __init__.py  admm_denoiser.py  admm_wtv.py  apgda_denoiser.py  aseq_dip.py  base_dip.py  callbacks.py  dip_tv.py  hqs_denoiser.py  red_dip.py  redapg.py  selfg_dip.py  stochastic_dip.py  unet.py  utils.py  vanilla_dip.py
dip/physics/: __init__.py  operator_module.py  power_iteration.py
dip/trainer/: __init__.py  trainer.py  utils.py
examples/: l2_min.py  linearised_dip.py  simple_dip.py  test_walnut.py  tiny_dip.py  torch_func_example.py
model/: __init__.py  autoencoder.py  unet.py  unet_old.py  utils.py
physics/: __init__.py
