[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-image-prior-handbook"
version = "0.1.0"
description = "Deep Image Prior for Computed Tomography"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Alexander Denker", email="a.denker@ucl.ac.uk" },
    { name = "Zeljko Kereta" },
    { name = "Riccardo Barbano"}
]

dependencies = [
    "astra-toolbox>=2.4",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "scikit-image>=0.22",
    "h5py>=3.8",
    "pillow>=10",
    "torch>=2.2",
    "torchvision>=0.17",
    "torchmetrics>=1.3",
    "triton>=2.0",
    "deepinv>=0.3",
    "einops>=0.7",
    "tqdm>=4.65",
    "wandb>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jupyter",
]

[tool.setuptools]
packages = ["dip"]
